--- a/web.config
+++ b/web.config
@@ -8,6 +8,9 @@
 
 <configuration>
      <system.webServer>
+          <staticContent>
+               <mimeMap fileExtension=".md" mimeType="text/x-markdown" />
+          </staticContent>
           <handlers>
                <!-- indicates that the app.js file is a node.js application to be handled by the iisnode module -->
                <add name="iisnode" path="server.js" verb="*" modules="iisnode"/>
