--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/JediMindtrick/NodeMicroservice",
   "dependencies": {
     "express": "3.4.8",
-    "express-markdown": "0.0.6"
+    "express-handlebars": "1.2.2",
+    "express-markdown-router": "1.0.1"
   }
 }
